Bug 406041 - Kile PDF Tools does not work
Summary: Kile PDF Tools does not work
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (show other bugs)
Version: 2.9.92
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-30 11:25 UTC by Andrea
Modified: 2019-04-06 14:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea 2019-03-30 11:25:26 UTC
SUMMARY


STEPS TO REPRODUCE
1. Wizard -> PDF Tools -> Task: any 
2. Remove "Overwrite the original file" 
3. Click Rearrange

OBSERVED RESULT
Nothing

EXPECTED RESULT
the new pdf file with the changes selected under "task".


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 18.10 - kernel 5.0.0
(available in About System)
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Michel Ludwig 2019-04-06 14:03:05 UTC
Git commit e623ad3139ff3a31896885d78a7b640f189572e0 by Michel Ludwig.
Committed on 06/04/2019 at 14:01.
Pushed by mludwig into branch 'master'.

Fix launching actions from the PDF wizard (at least for the pdfpages mode)

M  +37   -31   src/dialogs/pdf-wizard/pdfdialog.cpp
M  +3    -2    src/kile.cpp

https://commits.kde.org/kile/e623ad3139ff3a31896885d78a7b640f189572e0