Fix launching actions from the PDF wizard (at least for the pdfpages mode)

BUG: 406041