src/dialogs/pdf-wizard/pdfdialog.cpp
@@ -1,5 +1,6 @@
 /******************************************************************************
   Copyright (C) 2009-2011 by Holger Danielsson (holger.danielsson@versanet.de)
+            (C) 2019 by Michel Ludwig (michel.ludwig@kdemail.net)
  ******************************************************************************/
 
 /***************************************************************************
@@ -61,6 +62,7 @@ PdfDialog::PdfDialog(QWidget *parent,
     , m_manager(manager)
     , m_errorHandler(errorHandler)
     , m_output(output)
+    , m_tempdir(Q_NULLPTR)
     , m_proc(Q_NULLPTR)
     , m_rearrangeButton(new QPushButton)
     , m_buttonBox(new QDialogButtonBox(QDialogButtonBox::Help|QDialogButtonBox::Close))
@@ -183,10 +185,6 @@ PdfDialog::PdfDialog(QWidget *parent,
     m_PdfDialog.m_lbParameterInfo->setTextFormat(Qt::RichText);
     m_PdfDialog.m_cbOverwrite->setChecked(true);
     updateDialog();
-
-    // create tempdir
-    m_tempdir = new QTemporaryDir(QDir::tempPath() + QLatin1Char('/') + "pdfwizard/pdf-");
-    KILE_DEBUG_MAIN << "tempdir: " << m_tempdir->path() ;
 
     connect(this, &PdfDialog::output, m_output, &KileWidget::OutputView::receive);
     connect(m_PdfDialog.m_edInfile->lineEdit(), &QLineEdit::textChanged, this, &PdfDialog::slotInputfileChanged);
@@ -859,6 +857,19 @@ void PdfDialog::slotTaskChanged(int)
 // execute commands
 void PdfDialog::slotExecute()
 {
+    if(!m_tempdir) {
+        // create tempdir
+        m_tempdir = new QTemporaryDir(QDir::tempPath() + QLatin1String("/kile-pdfwizard"));
+        m_tempdir->setAutoRemove(true);
+        KILE_DEBUG_MAIN << "tempdir: " << m_tempdir->path();
+    }
+
+    if(!m_tempdir->isValid()) {
+        KMessageBox::error(this, i18n("Failed to create a temporary directory.\n\nThis wizard cannot be used."));
+        reject();
+        return;
+    }
+
     int tabindex = m_PdfDialog.tabWidget->currentIndex();
 
     switch (tabindex) {
@@ -943,9 +954,7 @@ void PdfDialog::executeAction()
 void PdfDialog::executeProperties()
 {
     // create temporary file
-    QTemporaryFile infotemp;
-//code was 	infotemp.setSuffix(".txt");
-//Add to constructor and adapt if necessay: QDir::tempPath() + QLatin1String("/myapp_XXXXXX") + QLatin1String(".txt")
+    QTemporaryFile infotemp(m_tempdir->path() + QLatin1String("/kile-pdfdialog-XXXXXX.txt"));
     infotemp.setAutoRemove(false);
 
     if(!infotemp.open()) {
@@ -1051,7 +1060,7 @@ void PdfDialog::showLogs(const QString &title, const QString &inputfile, const Q
 void PdfDialog::executeScript(const QString &command, const QString &dir, int scriptmode)
 {
     // delete old KProcess
-    if (m_proc) {
+    if(m_proc) {
         delete m_proc;
     }
 
@@ -1066,12 +1075,17 @@ void PdfDialog::executeScript(const QString &command, const QString &dir, int sc
     m_proc->setOutputChannelMode(KProcess::MergedChannels);
     m_proc->setReadChannel(QProcess::StandardOutput);
 
-    connect(m_proc, SIGNAL(readyReadStandardOutput()),
-            this, SLOT(slotProcessOutput()));
-    connect(m_proc, SIGNAL(readyReadStandardError()),
-            this, SLOT(slotProcessOutput()));
-    connect(m_proc, SIGNAL(finished(int,QProcess::ExitStatus)),
-            this, SLOT(slotProcessExited(int,QProcess::ExitStatus)));
+    connect(m_proc, &QProcess::readyReadStandardOutput,
+            this, &PdfDialog::slotProcessOutput);
+
+    connect(m_proc, &QProcess::readyReadStandardError,
+            this, &PdfDialog::slotProcessOutput);
+
+    connect(m_proc, QOverload<int, QProcess::ExitStatus>::of(&QProcess::finished),
+            this, &PdfDialog::slotProcessExited);
+
+    connect(m_proc, &QProcess::errorOccurred,
+            this, [this]() { slotProcessExited(-1, QProcess::CrashExit); });
 
     KILE_DEBUG_MAIN << "=== PdfDialog::runPdfutils() ====================";
     KILE_DEBUG_MAIN << "execute '" << command << "'";
@@ -1089,7 +1103,7 @@ void PdfDialog::slotProcessOutput()
 
 void PdfDialog::slotProcessExited(int exitCode, QProcess::ExitStatus exitStatus)
 {
-    if ( exitStatus != QProcess::NormalExit) {
+    if(exitCode != 0 || exitStatus != QProcess::NormalExit) {
         if (m_scriptmode != PDF_SCRIPTMODE_TOOLS)
             showError(i18n("An error occurred while executing the task."));
     }
@@ -1306,7 +1320,7 @@ QString PdfDialog::buildActionCommand()
     if ( m_execLatex ) {
         latexfile = buildLatexFile(m_param);
         pdffile = latexfile + ".pdf";
-        command = "pdflatex " + latexfile + ".tex";
+        command = "pdflatex -interaction=nonstopmode " + latexfile + ".tex";
     }
     else {
         pdffile = m_tempdir->path() + QFileInfo(m_inputfile).baseName() + "-temp.pdf";
@@ -1346,11 +1360,7 @@ QString PdfDialog::buildActionCommand()
 // create a temporary file to run latex with package pdfpages.sty
 QString PdfDialog::buildLatexFile(const QString &param)
 {
-    QTemporaryFile temp;
-//code was 	temp.setPrefix(m_tempdir->path());
-//Add to constructor and adapt if necessay: m_tempdir->path()QLatin1String("/myapp_XXXXXX.txt")
-//code was 	temp.setSuffix(".tex");
-//Add to constructor and adapt if necessay: QDir::tempPath() + QLatin1String("/myapp_XXXXXX") + QLatin1String(".tex")
+    QTemporaryFile temp(m_tempdir->path() + QLatin1String("/kile-pdfdialog-XXXXXX.tex"));
     temp.setAutoRemove(false);
 
     if(!temp.open()) {
@@ -1360,11 +1370,11 @@ QString PdfDialog::buildLatexFile(const QString &param)
     QString tempname = temp.fileName();
 
     QTextStream stream(&temp);
-    stream << "\\documentclass[a4paper,12pt]{article}";
-    stream << "\\usepackage[final]{pdfpages}";
-    stream << "\\begin{document}";
-    stream << "\\includepdf[" << param << "]{" << m_inputfile << "}";
-    stream << "\\end{document}";
+    stream << "\\documentclass[a4paper,12pt]{article}\n";
+    stream << "\\usepackage[final]{pdfpages}\n";
+    stream << "\\begin{document}\n";
+    stream << "\\includepdf[" << param << "]{" << m_inputfile << "}\n";
+    stream << "\\end{document}\n";
 
     // everything is prepared to do the job
     temp.close();
@@ -1374,11 +1384,7 @@ QString PdfDialog::buildLatexFile(const QString &param)
 // create a temporary pdf file to set a background color
 QString PdfDialog::buildPdfBackgroundFile(QColor *color)
 {
-    QTemporaryFile temp;
-//code was 	temp.setPrefix(m_tempdir->path());
-//Add to constructor and adapt if necessay: m_tempdir->path()QLatin1String("/myapp_XXXXXX.txt")
-//code was 	temp.setSuffix(".pdf");
-//Add to constructor and adapt if necessay: QDir::tempPath() + QLatin1String("/myapp_XXXXXX") + QLatin1String(".pdf")
+    QTemporaryFile temp(m_tempdir->path() + QLatin1String("/kile-pdfdialog-XXXXXX.pdf"));
     temp.setAutoRemove(false);
 
     if(!temp.open()) {
